--- a/index.html
+++ b/index.html
@@ -37,9 +37,9 @@
     <h3>Save all your Favorite Movies here</h3>
     <hr />
     <ul>
-        <li><a href="jsFire/app.html">jsFire = Pure Javascript + Firebase</a>
+        <li><a href="jsFire/app.html">jsFire app = Pure Javascript + Firebase</a>
         </li>
-        <li><a href="ngFire/app.html">ngFire = Angularjs + Firebase</a>
+        <li><a href="ngFire/app.html">ngFire app = Angularjs + Firebase</a>
         </li>
     </ul>
 </body>
