--- a/backFire/app.html
+++ b/backFire/app.html
@@ -13,14 +13,15 @@
     <input type="text" id="movieName" placeholder="Enter your Favorite Movie Name" />
     <h4>My Favorite Movies</h4>
     <ol id="favMovies">
+      <label id="loading">Loading.. Please wait..</label>
     </ol>
 
-    <script src="http://cdnjs.cloudflare.com/ajax/libs/json2/20121008/json2.js"></script>
-    <script src="http://cdnjs.cloudflare.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
-    <script src="http://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.4.3/underscore-min.js"></script>
-    <script src="http://cdn.firebase.com/v0/firebase.js"></script>
-    <script src="http://cdnjs.cloudflare.com/ajax/libs/backbone.js/0.9.10/backbone-min.js"></script>
-    <script src="http://firebase.github.io/backfire/examples/todos/backbone-firebase.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/json2/20121008/json2.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.4.3/underscore-min.js"></script>
+    <script src="https://cdn.firebase.com/v0/firebase.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/backbone.js/0.9.10/backbone-min.js"></script>
+    <script src="https://firebase.github.io/backfire/examples/todos/backbone-firebase.js"></script>
     <script src="app.js" type="text/javascript"></script>
     <script type="text/template" id="movieTemplate">
     <%- name %> [
