--- a/backFire/app.html
+++ b/backFire/app.html
@@ -21,8 +21,9 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.4.3/underscore-min.js"></script>
     <script src="https://cdn.firebase.com/v0/firebase.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/backbone.js/0.9.10/backbone-min.js"></script>
-    <script src="https://firebase.github.io/backfire/examples/todos/backbone-firebase.js"></script>
+    <script src="https://cdn.firebase.com/libs/backfire/0.3.0/backbone-firebase.min.js"></script>
     <script src="app.js" type="text/javascript"></script>
+    
     <script type="text/template" id="movieTemplate">
     <%- name %> [
             <a href="javascript:" class="edit">Edit</a>|
